feat: создать нового пользователя администратором
