# src/profiles/sdo/response-body.sdo.ts
@@ -3,6 +3,7 @@ import {
   IFieldDescription,
   createField,
 } from 'src/utils/apiPropertyFactory';
+import { HttpStatus } from '@nestjs/common';
 
 const profileDescription: IFieldDescription[] = [
   createField('_id', '65196b9715b55bd51b039144', 'string', ' ', true),
@@ -18,6 +19,25 @@ const profileDescription: IFieldDescription[] = [
   createField('success', true, 'boolean'),
 ];
 
+const badRequestAddUserDescription: IFieldDescription[] = [
+  createField(
+    'message',
+    'Аккаунт уже существует',
+    'string',
+    'Сообщение об ошибке',
+  ),
+  createField('error', 'Conflict', 'string', 'Тип ошибки'),
+  createField('statusCode', HttpStatus.CONFLICT, 'number', 'HTTP-статус код'),
+];
+
 export const UserProfileResponseBodyOK = new ApiPropertyFactory(
   profileDescription,
 ).generate('UserProfileResponseBodyOK');
+
+export const AddUserResponseBodyOK = new ApiPropertyFactory(
+  profileDescription,
+).generate('AddUserResponseBodyOK');
+
+export const AddUserResponseBodyNotOK = new ApiPropertyFactory(
+  badRequestAddUserDescription,
+).generate('AddUserResponseBodyNotOK');
